samples/_failures_safe/1761287620_e62acb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b9f2f2d.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_8b9f2f2d.c:145: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_8b9f2f2d.c:144:9: error: expected declaration or statement at end of input
  144 |         for
      |         ^~~
./samples/SAFE/__tmp_8b9f2f2d.c:144:9: error: expected declaration or statement at end of input
